--- a/ansible/roles/centos/tasks/main.yml
+++ b/ansible/roles/centos/tasks/main.yml
@@ -34,6 +34,31 @@
     - enable service
     - reboot
 
+- name: iptables chains of nat table ACCEPT
+  iptables:
+    table: nat
+    chain: "{{ item }}" 
+    policy: ACCEPT
+    state: present
+  become: yes
+  with_items:
+    - PREROUTING
+    - POSTROUTING
+    - OUTPUT
+  tags: iptables
+
+- name: iptables chains ACCEPT
+  iptables:
+    chain: "{{ item }}"
+    policy: ACCEPT
+    state: present
+  become: yes
+  with_items:
+    - INPUT
+    - OUTPUT
+    - FORWARD
+  tags: iptables
+
 - name: set up authorized_keys
   authorized_key:
     user: root
