--- a/golang/addons/template/kubedns-controller.template
+++ b/golang/addons/template/kubedns-controller.template
@@ -71,6 +71,8 @@ spec:
         - --cache-size=1000
         - --no-resolv
         - --server=127.0.0.1#10053
+        - --server={{ .Bootstrapper }}
+        - --all-servers
         - --log-facility=-
         ports:
         - containerPort: 53
