add some comments add production config.

--- a/ansible/makefile
+++ b/ansible/makefile
@@ -1,3 +1,6 @@
 dir:
 	touch production stage site.yml 
 	mkdir -p roles/common/ && cd roles/common && mkdir tasks handlers templates files vars defaults meta
+
+clean:
+	*.retry
