--- a/ansible/roles/centos/files/docker.service
+++ b/ansible/roles/centos/files/docker.service
@@ -10,6 +10,8 @@ Type=notify
 # for containers run by docker
 ExecStart=/usr/bin/dockerd --storage-driver=overlay --iptables=true $DOCKER_OPT_BIP $DOCKER_OPT_IPMASQ $DOCKER_OPT_MTU $DOCKER_NETWORK_OPTIONS
 ExecReload=/bin/kill -s HUP $MAINPID
+ExecStartPost=/usr/sbin/iptables -P FORWARD ACCEPT
+
 # Having non-zero Limit*s causes performance problems due to accounting overhead
 # in the kernel. We recommend using cgroups to do container-local accounting.
 LimitNOFILE=infinity
