--- a/ansible/roles/common/tasks/main.yml
+++ b/ansible/roles/common/tasks/main.yml
@@ -92,7 +92,7 @@
 # k8s
 - name: rm /etc/kubernetes dir
   file: 
-    path: /etc/kubernetes
+    path: "{{ .item }}"
     state: absent
   with_items:
     - /etc/kubernetes/ssl
