--- a/golang/template/templatefiles/cc-centos-post.template
+++ b/golang/template/templatefiles/cc-centos-post.template
@@ -17,9 +17,9 @@ set_docker() {
     # For install multi-kernel, set the first line kernel in grub list as default to boot
     grub2-set-default 0
     # load overlay for docker storage driver
-    echo "overlay" > /etc/modules-load.d/overlay.conf
+    #echo "overlay" > /etc/modules-load.d/overlay.conf
     # set overaly as docker storage driver instead of devicemapper (the default one on centos)
-    sed -i -e '/^ExecStart=/ s/$/ --storage-driver=overlay/' /usr/lib/systemd/system/docker.service
+    sed -i -e '/^ExecStart=/ s/$/ --storage-driver=overlay2/' /usr/lib/systemd/system/docker.service
 
     # set iptables to false for docker version >=1.13, to solve the iptables FORWARD drop
     sed -i -e '/^ExecStart=/ s/$/ --iptables=false/' /usr/lib/systemd/system/docker.service
