--- a/golang/template/cluster-desc.sample.yaml
+++ b/golang/template/cluster-desc.sample.yaml
@@ -23,7 +23,13 @@ coreos_version: "1122.2.0"
 
 # centos version
 download_kernel: y
-centos_version: "7.3.1611"
+# mirror_site, please check that $mirror_site/$centos_version/(isos|os) exist.
+# sunch as:
+#   http://mirrors.163.com/centos
+#   http://vault.centos.org/
+mirror_site: http://vault.centos.org
+# please note this version number, it's important.
+centos_version: "7.2.1511"
 
 # gpu drivers version
 set_gpu: y
@@ -64,21 +70,22 @@ ceph:
   osd_journal_size: 5000
 
 images:
-  hyperkube: "pineking/hyperkube-amd64:2169be"
-  pause: "typhoon1986/pause-amd64:3.0"
-  flannel: "typhoon1986/flannel:0.5.5"
-  ingress: "yancey1989/nginx-ingress-controller:0.8.3"
-  kubednsmasq: "pineking/kube-dnsmasq-amd64:1.4"
-  healthz: "pineking/exechealthz-amd64:1.2"
-  addon_manager: "pineking/kube-addon-manager-amd64:v6.4-alpha.3"
-  kubedns: "pineking/kubedns-amd64:1.9"
+  hyperkube: "gcr.io/google_containers/hyperkube-amd64:v1.6.2"
+  pause: "gcr.io/google_containers/pause-amd64:3.0"
+  flannel: "quay.io/coreos/flannel:v0.7.1-amd64"
+  ingress: "gcr.io/google_containers/nginx-ingress-controller:0.9.0-beta.3"
+  default_backend: "gcr.io/google_containers/defaultbackend:1.0"
+  kubedns: "gcr.io/google_containers/kubedns-amd64:1.9"
+  kubednsmasq: "gcr.io/google_containers/kube-dnsmasq-amd64:1.4"
+  healthz: "gcr.io/google_containers/exechealthz-amd64:1.2"
+  addon_manager: "gcr.io/google_containers/kube-addon-manager-amd64:v6.4-beta.1"
   ceph: "typhoon1986/ceph-daemon:tag-build-master-jewel-ubuntu-14.04-fix370"
-  default_backend: "yancey1989/defaultbackend:1.0"
   ntp: "redaphid/docker-ntp-server"
   heapster: "kubernetes/heapster:canary"
   grafana: "lupan/heapster_grafana:v2.6.0-2"
   influxdb: "lupan/heapster_influxdb:v0.5"
   dashboard: "pineking/kubernetes-dashboard-amd64:v1.6.0"
+
 
 nodes:
   - mac: "00:25:90:c0:f7:80"
