fix resgistry error

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,4 @@
-FROM alpine
-#FROM golang:alpine
+FROM distribution/registry
 
 # Install required software packages.
 RUN set -ex && \
@@ -9,7 +8,7 @@ apk add dnsmasq openssl
 # Upload Sextant Go programs and retrieve dependencies.
 RUN mkdir -p /go/bin
 COPY cloud-config-server /go/bin
-COPY registry            /go/bin
+#COPY registry            /go/bin
 
 # NOTICE: change install.sh HTTP server ip:port when running entrypoint.sh
 COPY entrypoint.sh /
