--- a/fabric/hosts.yaml
+++ b/fabric/hosts.yaml
@@ -1,5 +1,5 @@
-user: root
-passwd: 112233
+user: "root"
+password: "paddle@123"
 hosts:
   - 192.168.16.23
   - 192.168.16.24
@@ -8,3 +8,6 @@ hosts:
   - 192.168.16.27
   - 192.168.16.28
   - 192.168.16.29
+kernel:
+  old_version: "3.10.0-327.el7.x86_64"
+  new_version: "4.4.79-1.el7.elrepo.x86_64"
