--- a/fabric/hosts.yaml
+++ b/fabric/hosts.yaml
@@ -8,6 +8,10 @@ hosts:
   - 192.168.16.27
   - 192.168.16.28
   - 192.168.16.29
+  - 192.168.16.30
 kernel:
   old_version: "3.10.0-327.el7.x86_64"
   new_version: "4.4.79-1.el7.elrepo.x86_64"
+gpu:
+  driver_verion: 375.26
+bootstrapper: 192.168.16.30
