--- a/fabric/hosts.yaml
+++ b/fabric/hosts.yaml
@@ -8,10 +8,19 @@ hosts:
   - 192.168.16.27
   - 192.168.16.28
   - 192.168.16.29
-  - 192.168.16.30
 kernel:
   old_version: "3.10.0-327.el7.x86_64"
   new_version: "4.4.79-1.el7.elrepo.x86_64"
 gpu:
   driver_verion: 375.26
-bootstrapper: 192.168.16.30
+mac_host_dns:
+  - mac: "00:25:90:c0:f7:80"
+    host: "192.168.16.23"
+  - mac: "0c:c4:7a:82:c5:bc"
+    host: "192.168.16.24"
+  - mac: "0c:c4:7a:82:c5:b8"
+    host: "192.168.16.25"
+  - mac: "0c:c4:7a:82:c5:b8"
+    host: "192.168.16.26"
+  - mac: "0c:c4:7a:82:c5:b8"
+    host: "192.168.16.27"
