change docker path ok

--- a/golang/template/templatefiles/cc-centos-post.template
+++ b/golang/template/templatefiles/cc-centos-post.template
@@ -25,7 +25,7 @@ set_docker() {
     sed -i -e '/^ExecStart=/ s/$/ --iptables=false/' /usr/lib/systemd/system/docker.service
 
     # set path
-    if [[ ! -z "${docker_data_path}" }]]; then
+    if [[ ! -z "${docker_data_path}" ]]; then
     	sed -i -e "/^ExecStart=/ s@\$@  -g ${docker_data_path} @" /usr/lib/systemd/system/docker.service
     fi
 
