--- a/golang/template/templatefiles/cc-centos-post.template
+++ b/golang/template/templatefiles/cc-centos-post.template
@@ -24,6 +24,11 @@ set_docker() {
     # set iptables to false for docker version >=1.13, to solve the iptables FORWARD drop
     sed -i -e '/^ExecStart=/ s/$/ --iptables=false/' /usr/lib/systemd/system/docker.service
 
+    # set path
+    if [[ ! -z "${docker_data_path}" ]]; then
+    	sed -i -e "/^ExecStart=/ s@\$@  -g ${docker_data_path} @" /usr/lib/systemd/system/docker.service
+    fi
+
     # Explicit Docker option
     sed -i -e '/^ExecStart=/ s/$/ $DOCKER_OPT_BIP $DOCKER_OPT_IPMASQ $DOCKER_OPT_MTU $DOCKER_NETWORK_OPTIONS/' /usr/lib/systemd/system/docker.service
 }
@@ -63,12 +68,15 @@ else
 
 fi
 
-yum clean all
-yum makecache
+#yum clean all
+#yum makecache
 
 }
 
-set_hostname
+if [[ "${set_mac_hostname}" != " n" ]]; then
+    set_hostname
+fi
+
 set_docker
 set_ssh_config
 set_yum_repo
