fix dynamic hosts path issue

--- a/golang/addons/template/dnsmasq.conf.template
+++ b/golang/addons/template/dnsmasq.conf.template
@@ -29,4 +29,4 @@ pxe-service=x86PC, "Install CoreOS from network server", pxelinux
 enable-tftp
 tftp-root=/bsroot/tftpboot
 dhcp-script=/dhcp.sh
-hostsdir=/bsroot/hosts.d
+hostsdir=/bsroot/dnsmasq/hosts.d
