added dynamic name service (#581)
* remove necessary space which blocks dnamasq

* fix dynamic hosts path issue

* add mac translated host name first instead of original hostname

--- a/golang/addons/template/dnsmasq.conf.template
+++ b/golang/addons/template/dnsmasq.conf.template
@@ -28,3 +28,5 @@ pxe-prompt="Press F8 for menu.", 5
 pxe-service=x86PC, "Install CoreOS from network server", pxelinux
 enable-tftp
 tftp-root=/bsroot/tftpboot
+dhcp-script=/dhcp.sh
+hostsdir=/bsroot/dnsmasq/hosts.d
